修改 3.plan-cache-view.md

--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
@@ -4,7 +4,7 @@
 
 ## GV$OB_PLAN_CACHE_STAT
 
-`GV$OB_PLAN_CACHE_STAT` 视图用于记录每个计划缓存的状态，每个计划缓存在该视图中有一条记录。
+`GV$OB_PLAN_CACHE_STAT` 展示当前租户在当前（所有）OBServer 节点的计划缓存整体的状态。其字段信息如下表所示。
 
 |   **字段名称**   | **类型（MySQL 模式）**    |    **类型（Oracle 模式）**    |               **描述**                |
 |--------------|-------------|--------------|-------------------------------------|
@@ -24,7 +24,7 @@
 
 ## GV$OB_PLAN_CACHE_PLAN_STAT
 
-`GV$OB_PLAN_CACHE_PLAN_STAT` 用于记录计划缓存中所有执行计划的具体信息及每个计划总的执行统计信息，每个执行计划在该视图中有一条记录。
+`GV$OB_PLAN_CACHE_PLAN_STAT` 展示当前租户在当前（所有）OBServer 节点上的计划缓存中缓存的每一个缓存对象的状态。其字段信息如下表所示。
 
 |       **字段名称**        | **类型（MySQL 模式）**  | **类型（Oracle 模式）**  |           **描述**    |
 |-----------------------|-----------------------|----------------------|------------------------|
@@ -87,15 +87,7 @@
 
 ## GV$OB_PLAN_CACHE_PLAN_EXPLAIN
 
-`GV$OB_PLAN_CACHE_PLAN_EXPLAIN` 用于查询某条 SQL 在计划缓存中的执行计划。
-
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <ul>
-    <li>如果查询 <code>GV$OB_PLAN_CACHE_PLAN_EXPLAIN</code> 表, 则需要指定 <code>IP</code>、<code>Port</code>、<code>TENANT_ID</code>、<code>PLAN_ID</code> 等条件。</li>
-    <li>如果查询 <code>GV$OB_PLAN_CACHE_PLAN_EXPLAIN</code> 表, 则需要指定 <code>TENANT_ID</code>、<code>PLAN_ID</code> 等条件。</li>
-    </ul>
-  </main>
+`GV$OB_PLAN_CACHE_PLAN_EXPLAIN` 展示缓存在当前（全部）OBServer 节点中的计划缓存中的物理执行计划。其字段信息如下表所示。
 
 |   **字段名称**   | **类型（MySQL 模式）**  |  **类型（Oracle 模式）**    |      **描述**      |
 |--------------|----------------|----------------|------------------|
@@ -110,3 +102,7 @@
 | ROWS         | BIGNIT(20)   | NUMBER(38)     | 预估的结果行数          |
 | COST         | BIGNIT(20)   | NUMBER(38)     | 预估的代价            |
 | PROPERTY     | VARCHAR2(4096) | VARCHAR2(4096) |对应算子的信息          |
+
+## 相关文档
+
+[实时执行计划展示](../../2.sql-execution-plan/5.real-time-execution-plan-display.md)
