--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
@@ -42,7 +42,7 @@
 | SPECIAL_PARAMS        | VARCHAR2(4096)|  VARCHAR2(4096)   | 表示不可参数化的参数值    |
 | PARAM_INFOS           | LONGTEXT      |  CLOB  | 表示参数化信息  |
 | SYS_VARS              | VARCHAR2(4096)| VARCHAR2(4096)   | 影响缓存对象的系统变量的值   |
-| CONFIGS               | VARCHAR(4096)       | 不支持  |    表示影响执行计划的配置项信息    |       
+| CONFIGS               | VARCHAR(4096)       | 不支持该字段  |    表示影响执行计划的配置项信息    | 
 | PLAN_HASH             | BIGNIT(20) UNSIGNED   |  NUMBER(38) | SQL 执行计划的哈希值   |
 | FIRST_LOAD_TIME       | TIMESTAMP(6) |  TIMESTAMP(6) WITH LOCAL TIME ZONE | 第一次被加载时间   |
 | SCHEMA_VERSION        | BIGNIT(20)   |  NUMBER(38)                        | Schema 版本号   |
@@ -84,19 +84,12 @@
 | HINTS_ALL_WORKED      | TINYINT(4)  |  NUMBER(38)    | SQL 计划中的 Hint 是否都已经生效      |
 | PL_SCHEMA_ID          | BIGNIT(20) UNSIGNED  |  NUMBER(38)    | 对于非匿名块的 PL 对象，字段为缓存对象的 Schema ID；对于匿名块，字段与 `PS_STMT_ID` 相同；对于 SQL 计划，该字段无意义。       |
 | IS_BATCHED_MULTI_STMT | TINYINT(4)   |  NUMBER(38)    | 表示是否为 Batched Multi Stmt 优化的计划        |
-| RULE_NAME             | VARCHAR(256)        | 不支持   |  表示是否命中用户自定义改写规则。         |
+| RULE_NAME             | VARCHAR(256)        | 不支持该字段   |  表示是否命中用户自定义改写规则。         |
 
 ## (G)V$OB_PLAN_CACHE_PLAN_EXPLAIN
 
 `(G)V$OB_PLAN_CACHE_PLAN_EXPLAIN` 展示缓存在当前（全部）OBServer 节点中的计划缓存中的物理执行计划。其字段信息如下表所示。
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <ul>
-    <li>如果查询 <code>GV$OB_PLAN_CACHE_PLAN_EXPLAIN</code> 表, 则需要指定 <code>IP</code>、<code>Port</code>、<code>TENANT_ID</code>、<code>PLAN_ID</code> 等条件。</li>
-    <li>如果查询 <code>GV$OB_PLAN_CACHE_PLAN_EXPLAIN</code> 表, 则需要指定 <code>TENANT_ID</code>、<code>PLAN_ID</code> 等条件。</li>
-    </ul>
-  </main>
 
 |   **字段名称**   | **类型（MySQL 模式）**  |  **类型（Oracle 模式）**    |      **描述**      |
 |--------------|----------------|----------------|------------------|
@@ -111,3 +104,7 @@
 | ROWS         | BIGNIT(20)   | NUMBER(38)     | 预估的结果行数          |
 | COST         | BIGNIT(20)   | NUMBER(38)     | 预估的代价            |
 | PROPERTY     | VARCHAR2(4096) | VARCHAR2(4096) |对应算子的信息          |
+
+## 相关文档
+
+[实时执行计划展示](../../2.sql-execution-plan/5.real-time-execution-plan-display.md)
