--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/22.create-external-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/22.create-external-table-of-mysql-mode.md
@@ -52,7 +52,21 @@ CREATE EXTERNAL TABLE <table_name>
 
 ## 示例
 
-1. 准备数据。将要导入的外表数据所对应的 CSV 文件 `extdata.csv` 放在当前本地连接的 OBServer 节点的 `/home/admin/test` 路径中（需设置 `secure_file_priv` 的路径为 `/home/admin/`）。
+1. 准备数据。首先需要设置 `secure_file_priv` 的路径为 `/home/admin/`，将要导入的外表数据所对应的 CSV 文件 `extdata.csv` 放在当前本地连接的 OBServer 节点的 `/home/admin/test` 路径中。
+
+   设置全局安全路径的示例如下。
+
+   ```shell
+   obclient> SET GLOBAL secure_file_priv = ""
+   Query OK, 0 rows affected 
+   obclinet> \q
+   Bye
+   ```
+
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>由于 <code>secure_file_priv</code> 是 <code>GLOBAL</code> 变量，所以需要执行 <code>\q</code> 退出使之生效。</p>
+   </main>
 
    CSV 文件中的内容如下：
 
