--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/2.system-configuration-items-overview-list.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/2.system-configuration-items-overview-list.md
@@ -224,7 +224,7 @@
 ### RPC 认证相关
 
 | 配置项名 | 功能描述 |
-|[rpc_client_authentication_method](3.cluster-level-configuration-items/281.rpc_client_authentication_method)| 用于设置 RPC 客户端的安全认证方式。 |
+|[rpc_client_authentication_method](3.cluster-level-configuration-items/281.rpc_client_authentication_method.md)| 用于设置 RPC 客户端的安全认证方式。 |
 |[rpc_server_authentication_method](3.cluster-level-configuration-items/282.rpc_server_authentication_method)| 用于设置 RPC 服务端的安全认证方式。 |
 
 ### 其他
@@ -290,7 +290,7 @@
 |  配置项名  | 功能描述  |
 |-----------|----------|
 | [balancer_idle_time](4.tenant-level-configuration-items/68.balancer_idle_time.md) | 用于设置负载均衡等后台任务线程空闲时的唤醒间隔时间。    |
-| [enable_rebalance](3.cluster-level-configuration-items/67.enable_rebalance.md)    | 用于设置是否开启自动负载均衡的功能。   |
+| [enable_rebalance](4.tenant-level-configuration-items/67.enable_rebalance.md)    | 用于设置是否开启自动负载均衡的功能。   |
 
 ### 审计相关
 
