--- a/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/2.insufficient-system-memory-or-memory-leak.md
+++ b/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/2.insufficient-system-memory-or-memory-leak.md
@@ -8,7 +8,7 @@
 
 ### 重启 OBServer 节点
 
-对于系统内部模块的内存问题，一般考虑重启 OBServer 节点解决。建议您通过 OCP 执行指定节点的重启操作，重启 OBServer 节点详细信息请参见 [重启节点](../../../1.cluster-management/3.common-cluster-operations/3.restart-a-node.mdd)。
+对于系统内部模块的内存问题，一般考虑重启 OBServer 节点解决。建议您通过 OCP 执行指定节点的重启操作，重启 OBServer 节点详细信息请参见 [重启节点](../../../1.cluster-management/3.common-cluster-operations/3.restart-a-node.md)。
 
 ### 隔离问题节点或副本
 
