--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/15.resource-pool-management/5.merge-and-splitting-resource-pools.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/15.resource-pool-management/5.merge-and-splitting-resource-pools.md
@@ -1,12 +1,53 @@
-# 分裂资源池
+# 合并和分裂资源池
+
+您可以通过合并或分裂资源池来对资源池进行管理。
+
+## 合并资源池
+
+为了便于管理，您可以将租户内相同资源配置的多个资源池合并为一个资源池。
+
+### 使用限制
+
+合并资源池有如下使用限制：
+
+* 被合并的资源池的 `unit_num` 需要都相等。
+
+* 被合并的资源池的资源配置必须是同一个。
+
+### 示例操作
+
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
+  
+2. 执行以下语句，合并资源池。
+
+   语句如下：
+
+   ```sql
+   ALTER RESOURCE POOL MERGE  ('pool_name'[, 'pool_name' ...]) INTO ('merge_pool_name')
+   ```
+
+   其中，`pool_name` 为待合并的多个资源池的名称，`merge_pool_name` 为合并后资源池的名称。
+
+   <main id="notice" type='explain'>
+   <h4>说明</h4>
+   <p>合并资源池时，不会影响资源池被租户使用，仅在 Root Service 的管理层看来是多个资源池合并为一个资源池，方便统一维护。</p>
+   </main>
+
+   示例：
+
+   ```shell
+   obclient>ALTER RESOURCE POOL MERGE ('pool0','pool1','pool2') INTO ('pool3');
+   ```
+
+## 分裂资源池
 
 在日常使用中，为了对资源进行充分的利用，您可以将租户的一个多 Zone 资源池分裂为多个单 Zone 资源池后，再为每个 Zone 重新配置各自的资源配置。
 
-## 使用限制
+### 使用限制
 
 仅 `sys` 租户可以执行分裂资源池操作。
 
-## 示例背景
+### 示例背景
 
 在日常使用场景中，通常会创建如下资源池：
 
@@ -22,9 +63,9 @@ obclient>CREATE RESOURCE POOL pool1 UNIT='uc0', UNIT_NUM=1, ZONE_LIST=('z1','z2'
 ALTER RESOURCE POOL pool_name SPLIT INTO ('pool_name' [, 'pool_name' ...]) ON ('zone' [, 'zone' ...])
 ```
 
-## 示例操作
+### 示例操作
 
-1. 使用 `root` 用户登录集群的 `sys` 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
 2. 将资源池 `pool1` 分裂为 `pool10`、`pool11` 和 `pool12`，并为新的资源池指定新的资源单元配置。
 
