--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/16.resource-specification-management/2.modify-the-configuration-of-a-resource-unit.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/16.resource-specification-management/2.modify-the-configuration-of-a-resource-unit.md
@@ -1,10 +1,10 @@
-# 修改资源单元的配置
+# 修改资源规格配置
 
-修改资源单元配置即是调大或调小资源单元配置中的 CPU、内存、日志盘容量等的值。
+修改资源规格配置即是调大或调小资源规格配置中的 CPU、内存、日志盘容量等的值。
 
 ## 注意事项
 
-在修改资源单元配置前，如果该资源单元配置正在被租户使用并且确认需要增加资源，则在增加资源的过程中必须保证 OBServer 有足够的剩余资源可用于分配。您可以通过视图 `oceanbase.GV$OB_SERVERS` 来查询节点总资源和已经分配的资源，然后通过计算来确定是否可以修改资源单元配置。
+在修改资源规格配置前，如果该资源规格配置正在被租户使用并且确认需要增加资源，则在增加资源的过程中必须保证 OBServer 有足够的剩余资源可用于分配。您可以通过视图 `oceanbase.GV$OB_SERVERS` 来查询节点总资源和已经分配的资源，然后通过计算来确定是否可以修改资源规格配置。
 
 如果需要调大资源单元的配置，则修改后的资源总量都必须满足以下要求：
 
@@ -49,15 +49,15 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 ## 使用限制
 
-仅 `sys` 租户可以修改资源单元配置。
+仅 `sys` 租户可以修改资源规格配置。
 
 ## 操作步骤
 
-修改资源单元配置时，可修改 CPU、内存、IOPS 及日志盘规格中的若干项，没有被修改的值将保持不变。
+修改资源规格配置时，可修改 CPU、内存、IOPS 及日志盘规格中的若干项，没有被修改的值将保持不变。
 
 1. 使用 `root` 用户登录集群的 `sys` 租户。
 
-2. 修改资源单元配置。
+2. 修改资源规格配置。
 
    语句如下：
 
