--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/2.system-configuration-items-overview-list.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/2.system-configuration-items-overview-list.md
@@ -225,7 +225,7 @@
 
 | 配置项名 | 功能描述 |
 |[rpc_client_authentication_method](3.cluster-level-configuration-items/281.rpc_client_authentication_method.md)| 用于设置 RPC 客户端的安全认证方式。 |
-|[rpc_server_authentication_method](3.cluster-level-configuration-items/282.rpc_server_authentication_method)| 用于设置 RPC 服务端的安全认证方式。 |
+|[rpc_server_authentication_method](3.cluster-level-configuration-items/282.rpc_server_authentication_method.md)| 用于设置 RPC 服务端的安全认证方式。 |
 
 ### 其他
 
