--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/2.create-an-empty-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/2.create-an-empty-standby-tenant.md
@@ -22,7 +22,7 @@
 
 * `DBA_OB_ACCESS_POINT`: 用于获取访问入口信息。在主租户迁移复制、容灾等场景下，若访问入口发生变化，备租户可以自动感知，不需要用户手动修改。
 
-  关于 `DBA_OB_ACCESS_POINT` 视图的更多介绍，请参见 [DBA_OB_ACCESS_POINT](待补充)。
+  关于 `DBA_OB_ACCESS_POINT` 视图的更多介绍，请参见 [DBA_OB_ACCESS_POINT](../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/236.dba_ob_access_point-of-mysql-mode.md)。
 
 * `DBA_OB_TENANTS`：获取主租户的兼容模式。
 
