--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.create-database-link-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.create-database-link-of-mysql-mode.md
@@ -55,11 +55,11 @@ CREATE DATABASE LINK [IF NOT EXISTS] dblink_name CONNECT TO user_name@tenant_nam
 
 创建好 dblink 后，就可以对其进行查询和删除操作了。详细信息请参见 [SELECT](../6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md)。
 
-用户可以通过视图 `oceanbase.DBA_DB_LINKS` 查询所创建的 dblink 信息。详细信息请参见 [DBA_DB_LINKS](待补充);
+用户可以通过视图 `oceanbase.DBA_DB_LINKS` 查询所创建的 dblink 信息。详细信息请参见 [DBA_DB_LINKS](../../../../7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/237.dba_db_links-of-mysql-mode.md);
 
 ## 相关文档
 
 [SELECT](../6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md)
 
-[DBA_DB_LINKS](待补充)
+[DBA_DB_LINKS](../../../../7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/237.dba_db_links-of-mysql-mode.md)
 
