--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/16.resource-specification-management/2.modify-the-configuration-of-a-resource-unit.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/16.resource-specification-management/2.modify-the-configuration-of-a-resource-unit.md
@@ -6,7 +6,7 @@
 
 在修改资源规格配置前，如果该资源规格配置正在被租户使用并且确认需要增加资源，则在增加资源的过程中必须保证 OBServer 有足够的剩余资源可用于分配。您可以通过视图 `oceanbase.GV$OB_SERVERS` 来查询节点总资源和已经分配的资源，然后通过计算来确定是否可以修改资源规格配置。
 
-如果需要调大资源单元的配置，则修改后的资源总量都必须满足以下要求：
+如果需要调大资源规格的配置，则修改后的资源总量都必须满足以下要求：
 
 ```javascript
 Sum(min_cpu) <= CPU_CAPACITY;
@@ -45,7 +45,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
   有关配置项 `resource_hard_limit` 的更多说明信息，请参见 [resource_hard_limit](../../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/168.resource_hard_limit.md)。
 
-如果需要调小资源单元的配置，则需要保证修改后的 CPU、内存、日志盘容量等的资源总量大于或等于当前已经使用的日志盘空间。
+如果需要调小资源规格的配置，则需要保证修改后的 CPU、内存、日志盘容量等的资源总量大于或等于当前已经使用的日志盘空间。
 
 ## 使用限制
 
