--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/2.string-functions-of-mysql-mode/87.substring_index-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/2.string-functions-of-mysql-mode/87.substring_index-of-mysql-mode.md
@@ -20,7 +20,7 @@ SUBSTRING_INDEX(str, delim, count)
 
 * 如果 `count=0`，也返回空串。
 
-*`str`、`delim` 和 `count` 参数支持数值与字符串的隐式转换。*
+*`str`、`delim` 和 `count` 参数支持数值与字符串的隐式转换。
 
 ## 示例
 
