--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/2.string-functions-of-mysql-mode/95.soundex-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/2.string-functions-of-mysql-mode/95.soundex-of-mysql-mode.md
@@ -13,7 +13,7 @@ SOUNDEX(str)
 ## 示例
 
 ```sql
-obclient [test]> select SOUNDEX('a');
+obclient> SELECT SOUNDEX('a');
 +--------------+
 | SOUNDEX('a') |
 +--------------+
