--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/2.string-functions-of-mysql-mode/4.char-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.single-row-functions-of-mysql-mode/2.string-functions-of-mysql-mode/4.char-of-mysql-mode.md
@@ -26,7 +26,7 @@ obclient> select CHARSET(char('')), CHARSET(char('' USING utf8mb4));
 
 如果返回的值在指定的字符集中是非法的，则会抛出一个 `WARNING` 提示。特别地，如果 `sql_mode` 设置为 `STRICT_ALL_TABLES` 或 `STRICT_TRANS_TABLES` 时，如果返回的值在指定的字符集中非法，则会返回 `NULL`。
 
-有关 `sql_mode` 的详细信息，请参见《OceanBase 数据库 参考指南》中的 **系统变量** 章节。
+有关 `sql_mode` 的详细信息，请参见 [sql_mode](../../../../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/117.sql_mode-global.md)。
 
 ```sql
 obclient> SET SESSION sql_mode='STRICT_ALL_TABLES';
