--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/11.xml-date-type-of-oracle-mode/5.conversion-of-the-xmltype-data-type-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/11.xml-date-type-of-oracle-mode/5.conversion-of-the-xmltype-data-type-of-oracle-mode.md
@@ -39,7 +39,7 @@ SELECT SUBSTR(XMLPARSE(DOCUMENT'<a>123</a>')) FROM DUAL;
 SELECT LENGTH(XMLPARSE(DOCUMENT'<a>123</a>')) FROM DUAL;
 ```
 
-### 相关文档
+## 相关文档
 
 更多 XMLType 数据类型的转换相关函数的内容，请参见以下信息：
 
@@ -51,6 +51,6 @@ SELECT LENGTH(XMLPARSE(DOCUMENT'<a>123</a>')) FROM DUAL;
 
 [XMLPARSE()](../../../5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/13.xml-functions-of-oracle-mode/2.construct-xmltype-data-functions-of-oracle-mode/4.xmlparse-function-of-oracle-mode.md)
 
-[GETCLOBVAL()](待补充)
+[GETCLOBVAL](../../../../../3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/296.xmltype-oracle/3.getclobval-oracle.md)
 
-[GETSTRINGVAL()](待补充)
+[GETSTRINGVAL](../../../../../3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/296.xmltype-oracle/4.getstringval-oracle.md)
