--- a/zh-CN/7.reference/7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/15.gv-plan_cache_plan_stat-of-mysql-mode.md
+++ b/zh-CN/7.reference/7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/15.gv-plan_cache_plan_stat-of-mysql-mode.md
@@ -74,3 +74,4 @@ GV$OB_PLAN_CACHE_PLAN_STAT
 | HINTS_ALL_WORKED      | tinyint(4)          | NO         | SQL 计划中的 Hint 是否都已经生效                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
 | PL_SCHEMA_ID          | bigint(20) unsigned | NO         | 对于非匿名块的 PL 对象，字段为缓存对象的 Schema ID；对于匿名块，字段与 ps_stmt_id  相同；对于 SQL 计划，该字段无意义                                                                                                                                                                                                                                                                                                                                                                                                                                      |
 | IS_BATCHED_MULTI_STMT | tinyint(4)          | NO         | 表示是否为 Batched Multistmt 优化的计划                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
+| RULE_NAME | varchar(256) | NO | 表示是否命中用户自定义改写规则，如果命中了用户自定义改写规则，该字段记录命中的规则名称 |
