--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/17.set-the-maximum-connections.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/17.set-the-maximum-connections.md
@@ -83,3 +83,6 @@
 
 * [设置参数](../2.configuration-management/2.set-parameters.md)
 * [设置变量](../2.configuration-management/3.set-variables.md)
+* [查看租户会话](15.view-tenant-sessions.md)
+* [终止租户会话](16.terminate-a-tenant-session.md)
+
