修改 8.tutorial-list.md

--- a/zh-CN/2.quickstart/8.tutorial-list.md
+++ b/zh-CN/2.quickstart/8.tutorial-list.md
@@ -42,43 +42,43 @@
 
 本视频介绍了使用 OBD 快速部署社区版 OceanBase 数据库。
 
-<video src="https://file.oceanbase.com/doc/video/00%20%E6%97%A7-%E4%BD%BF%E7%94%A8%20OBD%20%E9%83%A8%E7%BD%B2%20OceanBase%20%E6%95%B0%E6%8D%AE%E5%BA%93_01.mp4" controls="" width="811px" height="456.188px"></video>
+<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/02%20%E4%BD%BF%E7%94%A8%20obd%20%E9%83%A8%E7%BD%B2%20oceanbase.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 使用 Docker 快速部署 OceanBase 数据库
 
 本视频介绍了使用 Docker 快速部署社区版 OceanBase 数据库。
 
-<video src="https://file.oceanbase.com/doc/video/01%20%E6%97%A7-%E4%BD%BF%E7%94%A8%20Docker%20%E9%83%A8%E7%BD%B2%20OceanBase.mp4" controls="" width="811px" height="456.188px"></video>
+<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/02%20%E4%BD%BF%E7%94%A8%20docker%20%E9%83%A8%E7%BD%B2%20oceanbase.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## OceanBase 数据库的基本操作
 
 本视频介绍了社区版 OceanBase 数据库的一些基本操作。
 
-<video src="https://file.oceanbase.com/doc/video/02%20%E6%97%A7-OceanBase%20%E5%9F%BA%E7%A1%80%E8%AF%AD%E6%B3%95.mp4" controls="" width="811px" height="456.188px"></video>
+<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/4.%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Python 应用程序
 
 本视频介绍如何通过 Python 驱动连接和使用 OceanBase 数据库。
 
-<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/03%20%E5%88%9B%E5%BB%BA%20Python%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/05%20python%20%E8%BF%9E%E6%8E%A5%E6%95%B0%E6%8D%AE%E5%BA%93.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 C 应用程序
 
 本视频介绍了如何通过 OceanBase Connector/C 驱动连接并使用 OceanBase 数据库。
 
-<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/04%20%E5%88%9B%E5%BB%BA%20C%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/06%20%E5%88%9B%E5%BB%BA%20c%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Go 应用程序
 
 本视频介绍 Go 应用程序示例如何通过驱动 Go-SQL-Driver/MySQL 连接并使用 OceanBase 数据库。
 
-<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/05%20%E5%88%9B%E5%BB%BA%20Go%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/07%20%E5%88%9B%E5%BB%BA%20go%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Java 应用程序
 
 本视频介绍了如何通过 MySQL Connector/J 连接并使用 OceanBase 数据库。
 
-<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/06%20%E5%88%9B%E5%BB%BA%20Java%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/08%20%E5%88%9B%E5%BB%BA%20java%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 在 OceanBase 数据库上进行 TPC-C 测试
 
