--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/45.cpu_count.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/45.cpu_count.md
@@ -9,6 +9,4 @@ cpu_count
 | 参数类型             | 整型                                                                                  |
 | 默认值              | 0|
 | 取值范围             | \[0, +∞)                                                                            |
-| 是否重启 OBServer 节点生效 | 否 <br>**说明**<br>  集群下的其他配置可能会影响该配置项的生效方式。建议在该配置项配置后，通过 `SELECT` 语句，在  `GV$OB_SERVERS` 内部表中查看 `CPU_CAPACITY` 字段实际生效的值。若未动态生效，需要重启整个集群。 |
-
-
+| 是否重启 OBServer 节点生效 | 否 <main id="notice" type='explain'><h4>说明</h4><p>集群下的其他配置可能会影响该配置项的生效方式。建议在该配置项配置后，通过 <code>SELECT</code> 语句，在  <code>GV$OB_SERVERS</code> 内部表中查看 <code>CPU_CAPACITY</code> 字段实际生效的值。若未动态生效，需要重启整个集群。</p></main> |
