--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/6.optimizer-dynamic-sampling.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/6.optimizer-dynamic-sampling.md
@@ -91,8 +91,6 @@ SELECT
     NO_PARALLEL
     DYNAMIC_SAMPLING(0)
     QUERY_TIMEOUT(1000000)
-    OPT_PARAM('USE_DEFAULT_OPT_STAT','TRUE')
-    OPT_PARAM('USE_FORCE_BLOCK_SAMPLE','TRUE')
 */ 
 count(*),
 approx_count_distinct("C4"),
@@ -108,8 +106,6 @@ SELECT
     PARALLEL(64)
     DYNAMIC_SAMPLING(0)
     QUERY_TIMEOUT(1000000)
-    OPT_PARAM('USE_DEFAULT_OPT_STAT','TRUE')
-    OPT_PARAM('USE_FORCE_BLOCK_SAMPLE','TRUE')
 */ 
 count(*),
 approx_count_distinct("C4"),
@@ -127,14 +123,12 @@ FROM "TEST"."T1" SAMPLE BLOCK(2*ratio);
 * `PARALLEL(x)`：并行采样，原始 SQL 未指定并行度，可以提高采样比例。
 * `DYNAMIC_SAMPLING(0)`：动态采样 SQL 不能走动态采样。
 * `QUERY_TIMEOUT`：采样时间 SQL 的查询时间上限。
-* `OPT_PARAM('USE_DEFAULT_OPT_STAT','TRUE')`：动态采样 SQL 使用默认统计信息。
-* `OPT_PARAM('USE_FORCE_BLOCK_SAMPLE','TRUE')`：强制走块采样，不退化为行采样。
 
 ## 动态采样的应用场景
 
 目前动态采样功能默认生效于当前用户的 SQL，当前只支持基表的动态采样。在没有关闭动态采样功能时，以下场景会尝试在计划生成阶段使用动态采样：
 
-* 统计信息不可用（无统计信息/统计信息过期）。
+* 没有统计信息。
 * 查询条件中存在复杂谓词，例如 `c1 like '%test%'`，无法用选择率计算公式进行行数估计。
 * 用户指定使用动态采样。
 
