--- a/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/1.service-faq-for-sys-tenants-rs.md
+++ b/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/1.service-faq-for-sys-tenants-rs.md
@@ -34,15 +34,9 @@ OceanBase 中，Root Service 作为负责集群资源管理、分布式策略执
     <p>截止 OceanBase V3.2 版本，修改 <code>resource unit</code> 配置仅 CPU、Memory 配置是实际生效的，其他 IO 参数，例如磁盘、iops 等都暂时无效，默认即可。</p>
   </main>
 
-### 执行 stop server 或者 RS 切主
+### 执行 stop server
 
-当 `sys` 租户队列积压时，可以通过 RS 切主，缓解当前的资源压力。您可以根据需要参照如下命令，执行 RS 切主。
-
-```sql
-obclient> ALTER SYSTEM SWITCH ROOTSERVICE {LEADER | FOLLOWER} {zone | server};
-```
-
-或者可以执行 `stop server` 隔离 RS/SYS 租户所在的机器
+当 `sys` 租户队列积压时可以执行 `stop server` 隔离 RS/SYS 租户所在的机器
 
 ```sql
 obclient> ALTER SYSTEM STOP SERVER "xx.xx.xx.xx:2882";
@@ -50,4 +44,4 @@ obclient> ALTER SYSTEM STOP SERVER "xx.xx.xx.xx:2882";
 
 ### 重启问题节点
 
-对问题 RS 所在的 OB 节点做重启操作，详情请参见 [重启节点](../../../1.cluster-management/3.common-cluster-operations/3.restart-a-node.md)。
+对问题 RS 所在的 OB 节点做重启操作，详情请参见 [重启 OBServer 服务](../../../../2.basic-database-management/1.manage-clusters/5.manage-observer/4.restart-observer.md)。
