--- a/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/2.insufficient-system-memory-or-memory-leak.md
+++ b/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/2.insufficient-system-memory-or-memory-leak.md
@@ -8,7 +8,7 @@
 
 ### 重启 OBServer 节点
 
-对于系统内部模块的内存问题，一般考虑重启 OBServer 节点解决。建议您通过 OCP 执行指定节点的重启操作，重启 OBServer 节点详细信息请参见 [重启节点](../../../1.cluster-management/3.common-cluster-operations/3.restart-a-node.md)。
+对于系统内部模块的内存问题，一般考虑重启 OBServer 节点解决。建议您通过 OCP 执行指定节点的重启操作，重启 OBServer 节点详细信息请参见 [启动 OBServer 服务](../../../../2.basic-database-management/1.manage-clusters/5.manage-observer/4.restart-observer.md) 和 [停止 OBServer 服务](../../../../2.basic-database-management/1.manage-clusters/5.manage-observer/3.stop-or-start-observer.md)。
 
 ### 隔离问题节点或副本
 
@@ -26,7 +26,7 @@
    alter system stop server '10.0.0.0.:2882' zone='z1;
    ```
 
-   更多运维 zone 的详细信息请参见 [隔离节点](../../../1.cluster-management/3.common-cluster-operations/6.isolation-a-node.md)。
+   更多运维 zone 的详细信息请参见 [停止 OBServer 服务](../../../../2.basic-database-management/1.manage-clusters/5.manage-observer/3.stop-or-start-observer.md)。
 
 2. 除了隔离问题节点，根据不同情况，还可以将问题发生的副本整体做 `stop zone` 隔离，请参考如下语句。
 
