--- a/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/2.problems-caused-by-capacity-changes/2.the-disk-i-o-of-the-node-is-too-high.md
+++ b/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/2.problems-caused-by-capacity-changes/2.the-disk-i-o-of-the-node-is-too-high.md
@@ -47,7 +47,7 @@
    SHOW PARAMETERS LIKE 'compaction_mid_thread_score';
    ```
 
-   您还可以在 OCP 界面通过修改转储策略调低转储线程数，具体参见 [修改转储配置](../../../../2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md)。
+   您还可以在 OCP 界面通过修改转储策略调低转储线程数，具体参见 [修改转储配置](../../../../7.reference/2.system-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md)。
 
 
 5. 调低后台任务的网络带宽。
