--- a/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/2.insufficient-system-memory-or-memory-leak.md
+++ b/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/2.insufficient-system-memory-or-memory-leak.md
@@ -8,7 +8,7 @@
 
 ### 重启 OBServer 节点
 
-对于系统内部模块的内存问题，一般考虑重启 OBServer 节点解决。建议您通过 OCP 执行指定节点的重启操作，重启 OBServer 节点详细信息请参见 [启动 OBServer 节点](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000002101077) 和 [停止 OBServer 节点服务](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000002101078)。
+对于系统内部模块的内存问题，一般考虑重启 OBServer 节点解决。建议您通过 OCP 执行指定节点的重启操作，重启 OBServer 节点详细信息请参见 [重启 OBServer 节点](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000002101077)。 
 
 ### 隔离问题节点或副本
 
