--- a/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/1.service-faq-for-sys-tenants-rs.md
+++ b/zh-CN/6.manage/11.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/1.service-faq-for-sys-tenants-rs.md
@@ -44,4 +44,4 @@ obclient> ALTER SYSTEM STOP SERVER "xx.xx.xx.xx:2882";
 
 ### 重启问题节点
 
-对问题 RS 所在的 OB 节点做重启操作，详情请参见 [重启 OBServer 服务](../../../../2.basic-database-management/1.manage-clusters/5.manage-observer/4.restart-observer.md)。
+对问题 RS 所在的 OB 节点做重启操作，详情请参见 [重启 OBServer 节点](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000002101077)。
