--- a/zh-CN/7.reference/5.sql-reference/3.pl-reference/2.pl-mysql/1.basic-syntax-mysql.md
+++ b/zh-CN/7.reference/5.sql-reference/3.pl-reference/2.pl-mysql/1.basic-syntax-mysql.md
@@ -29,7 +29,7 @@ DELIMITER //
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>使用 OceanBase 数据库开发时，一般需要自定义分隔符。如果 PL 块内部定义中不包含由 <code>；</code> 分隔的语句，则不需要使用分隔符。</p>
+    <p>使用 OceanBase 数据库开发时，一般需要自定义分隔符。如果 PL 块内部定义中不包含由 <code>;</code> 分隔的语句，则不需要使用分隔符。</p>
   </main>
 
 ## DECLARE 声明 
