--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/4.trigger-of-mysql-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/4.trigger-of-mysql-mode.md
@@ -1,6 +1,6 @@
 # 触发器 
 
-OceanBase 数据库 MySQL 模式兼容 MySQL 5.6 的触发器。触发器是与表相关的数据库对象，触发器可以在语句插入、更新或删除关联表中的行时被激活。例如，您可以通过 INSERT 或 LOAD DATA 语句插入行，并且每插入一行就会激活一次 INSERT 触发器。如果批量插入两行数据，则会出发两次触发器。
+OceanBase 数据库 MySQL 模式兼容 MySQL 5.6 的触发器。触发器是与表相关的数据库对象，触发器可以在语句插入、更新或删除关联表中的行时被激活。例如，您可以通过 INSERT 或 LOAD DATA 语句插入行，并且每插入一行就会激活一次 INSERT 触发器。如果批量插入两行数据，则会触发两次触发器。
 
 触发器可以设置为在触发事件之前或之后激活。例如，您可以在插入表的每一行之前或在更新的每一行之后激活触发器。
 
