--- a/zh-CN/7.reference/12.database-proxy/17.set-the-maximum-connections.md
+++ b/zh-CN/7.reference/12.database-proxy/17.set-the-maximum-connections.md
@@ -110,6 +110,7 @@
      +----------------+----------+-------+--------+-----------+---------------------------------+-----------+-------+-----------------------------------------------------------------+----------------+-------------------+
      6 rows in set
      ```
+  
      查询结果中，`VALUE` 列对应的值即为对应的配置项的值。
 
      有关视图 `GV$OB_PARAMETERS` 的更多介绍，请参见 [GV$OB_PARAMETERS](../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/6.gv-ob_parameters-of-mysql-mode.md)。
@@ -117,7 +118,7 @@
 3. 设置租户的最大连接数。
 
    * 设置整个租户的最大连接数
-   
+
      ```sql
      SET GLOBAL max_connections = 1000;
      ```
@@ -142,11 +143,12 @@
 
 1. 租户管理员登录到集群的 Oracle 租户。
 
-2. 通过视图查看租户的最大连接数。 
+2. 通过视图查看租户的最大连接数。
 
    ```sql
    SELECT * FROM SYS.GV$OB_PARAMETERS WHERE NAME LIKE '_resource_limit_max_session_num';
    ```
+
    <main id="notice" type='explain'>
    <h4>说明</h4>
    <p>隐藏配置项无法通过 <code>SHOW</code> 语句查询，只能通过 <code>GV$OB_PARAMETERS</code> 视图查询。</p>
@@ -184,3 +186,5 @@
 
 * [设置参数](../2.system-management/2.configuration-management/2.set-parameters.md)
 * [设置变量](../2.system-management/2.configuration-management/3.set-variables.md)
+* [查看租户会话](15.view-tenant-sessions.md)
+* [终止租户会话](16.terminate-a-tenant-session.md)
