--- a/zh-CN/2.quickstart/8.tutorial-list.md
+++ b/zh-CN/2.quickstart/8.tutorial-list.md
@@ -48,7 +48,7 @@
 
 本视频介绍了使用 Docker 快速部署社区版 OceanBase 数据库。
 
-<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/02%20%E4%BD%BF%E7%94%A8%20docker%20%E9%83%A8%E7%BD%B2%20oceanbase.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-9000242 src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/02%20%E4%BD%BF%E7%94%A8%20docker%20%E9%83%A8%E7%BD%B2%20oceanbase.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## OceanBase 数据库的基本操作
 
