--- a/zh-CN/6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md
@@ -4,7 +4,7 @@
 
 OceanBase 数据库 V4.0.0 版本支持 OSS、NFS 两种备份介质，提供了备份、恢复、清理三大功能。
 
-OceanBase 数据库支持租户级别的物理备份。物理备份由数据备份、日志归档两种数据组成，故物理备份由数据备份和日志归档两个功能组合而成。
+OceanBase 数据库支持租户级别的物理备份。物理备份由数据备份、日志归档两种数据组成，故物理备份由数据备份和日志归档两个功能组合而成。这里的租户指的是用户的 User 租户，不支持 `sys` 租户和 Meta 租户的物理备份。
 
 数据备份指的是备份数据的功能，该功能分为全量备份和增量备份两种：
 
