--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/1.gv-ob-sql-audit.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/1.gv-ob-sql-audit.md
@@ -1,6 +1,6 @@
 # GV$OB_SQL_AUDIT
 
-`GV$OB_SQL_AUDIT` 是全局 SQL 审计表，可以用来查看每次请求客户端来源、执行服务器信息、执行状态信息、等待事件以及执行各阶段耗时等。
+`GV$OB_SQL_AUDIT` 是全局 SQL 审计表，可以用来查看每次请求客户端来源、执行服务器信息、执行状态信息、等待时间以及执行各阶段耗时等。
 
 ## SQL Audit 相关设置
 
