--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/22.flush.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/22.flush.md
@@ -8,7 +8,9 @@
 
 ```sql
 ALTER SYSTEM FLUSH PLAN CACHE 
-     [[SQL_identifier] [database_list] tenant_list ] [GLOBAL]
+     [
+      [SQL_identifier] [database_list] tenant_list 
+      ] [GLOBAL]
 
 database_list:
      databases ='database_name, database_name...'
