--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/2.quick-start-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/2.quick-start-of-ob-operator.md
@@ -126,10 +126,10 @@ mysql -hxxx.xxx.xxx.xxx -P2881 -uroot oceanbase -A -c
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>service 为 ClusterIP 类型，需要在 Kubernetes 节点上进行连接，如果要远程连接，需要再设置 <a href="[./4.replace-data-of-mysql-mode.md](https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/)">Port Forward</a>。</p>
+  <p>service 为 ClusterIP 类型，需要在 Kubernetes 节点上进行连接，如果要远程连接，需要再设置 <a href="https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/">Port Forward</a>。</p>
 </main>
 
-更详细的介绍请参考 [集群创建](5.ob-operator-user-guide/1.cluster-management-of-ob-operator/1.cluster-creation.md)。
+更详细的介绍请参考 [集群创建](5.ob-operator-user-guide/1.cluster-management-of-ob-operator/1.create-cluster-of-ob-operator.md)。
 
 ## 创建租户
 
@@ -188,7 +188,7 @@ status:
 mysql -hxxx.xxx.xxx.xxx -P2881 -uroot@obtenant oceanbase -A -c
 ```
 
-更详细的内容请参考 [新建租户](5.ob-operator-user-guide/2.tenant-management-of-ob-operator/1.new-Tenant.md)。
+更详细的内容请参考 [新建租户](5.ob-operator-user-guide/2.tenant-management-of-ob-operator/1.create-tenant-of-ob-operator.md)。
 
 ## 删除 OceanBase 集群
 
@@ -210,7 +210,7 @@ kubectl get obcluster
 No resources found in default namespace.
 ```
 
-更详细的内容请参考 [删除集群](https://yuque.antfin-inc.com/ylz01380183/sg3eas/gidd2bxvpu69r0zg)
+更详细的内容请参考 [删除集群](5.ob-operator-user-guide/2.tenant-management-of-ob-operator/3.delete-tenant-of-ob-operator.md)
 
 ## 删除 ob-operator
 
