--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/2.cluster-scale-in-of-ob-operator/1.adding-a-zone-to-a-cluster-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/1.cluster-management-of-ob-operator/2.cluster-scale-in-of-ob-operator/1.adding-a-zone-to-a-cluster-of-ob-operator.md
@@ -12,7 +12,7 @@
 
 * 服务器要有足够的资源，能够支持新增 zone 所需资源。
 
-* ob-operator 会根据 OceanBase 数据库配置文件 obcluster.yaml 中的 nodeSelector 来决定 observer 节点的分布，因此需要首先对 Kubernetes 的 node 节点配置 label。具体操作可参考 在 [集群创建](../1.%E9%9B%86%E7%BE%A4%E5%88%9B%E5%BB%BA.md)。
+* ob-operator 会根据 OceanBase 数据库配置文件 obcluster.yaml 中的 nodeSelector 来决定 observer 节点的分布，因此需要首先对 Kubernetes 的 node 节点配置 label。具体操作可参考 在 [集群创建](../1.create-cluster-of-ob-operator.md)。
 
 ## 操作步骤
 
