--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/2.modify-tenant-of-ob-operator/3.other-configuration-item-modifications-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/2.modify-tenant-of-ob-operator/3.other-configuration-item-modifications-of-ob-operator.md
@@ -2,9 +2,9 @@
 
 本文主要介绍除租户资源、租户副本外，其他配置项的修改。
 
-* 修改租户资源的详细内容可参考 [资源管理](1.resource-management.md)。
+* 修改租户资源的详细内容可参考 [资源管理](1.resource-management-of-ob-operator.md)。
 
-* 修改租户副本的详细内容可参考 [副本管理](2.replica-management.md)。
+* 修改租户副本的详细内容可参考 [副本管理](2.replica-management-of-ob-operator.md)。
 
 ## 修改租户的连接白名单
 
