--- a/zh-CN/2.quickstart/8.tutorial-list.md
+++ b/zh-CN/2.quickstart/8.tutorial-list.md
@@ -42,40 +42,76 @@
 
 本视频介绍了使用 OBD 快速部署社区版 OceanBase 数据库。
 
-<video src="https://file.oceanbase.com/doc/video/00%20%E6%97%A7-%E4%BD%BF%E7%94%A8%20OBD%20%E9%83%A8%E7%BD%B2%20OceanBase%20%E6%95%B0%E6%8D%AE%E5%BA%93_01.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000242" src="https://file.oceanbase.com/doc/video/00%20%E6%97%A7-%E4%BD%BF%E7%94%A8%20OBD%20%E9%83%A8%E7%BD%B2%20OceanBase%20%E6%95%B0%E6%8D%AE%E5%BA%93_01.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 使用 Docker 快速部署 OceanBase 数据库
 
 本视频介绍了使用 Docker 快速部署社区版 OceanBase 数据库。
 
-<video src="https://file.oceanbase.com/doc/video/01%20%E6%97%A7-%E4%BD%BF%E7%94%A8%20Docker%20%E9%83%A8%E7%BD%B2%20OceanBase.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000243" src="https://file.oceanbase.com/doc/video/01%20%E6%97%A7-%E4%BD%BF%E7%94%A8%20Docker%20%E9%83%A8%E7%BD%B2%20OceanBase.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## OceanBase 数据库的基本操作
 
 本视频介绍了社区版 OceanBase 数据库的一些基本操作。
 
-<video src="https://file.oceanbase.com/doc/video/02%20%E6%97%A7-OceanBase%20%E5%9F%BA%E7%A1%80%E8%AF%AD%E6%B3%95.mp4" controls="" width="811px" height="456.188px"></video>
+<video  data-code="9000244" src="https://file.oceanbase.com/doc/video/02%20%E6%97%A7-OceanBase%20%E5%9F%BA%E7%A1%80%E8%AF%AD%E6%B3%95.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Python 应用程序
 
 本视频介绍如何通过 Python 驱动连接和使用 OceanBase 数据库。
 
-<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/03%20%E5%88%9B%E5%BB%BA%20Python%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000245" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/03%20%E5%88%9B%E5%BB%BA%20Python%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 C 应用程序
 
 本视频介绍了如何通过 OceanBase Connector/C 驱动连接并使用 OceanBase 数据库。
 
-<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/04%20%E5%88%9B%E5%BB%BA%20C%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video  data-code="9000246" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/04%20%E5%88%9B%E5%BB%BA%20C%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Go 应用程序
 
 本视频介绍 Go 应用程序示例如何通过驱动 Go-SQL-Driver/MySQL 连接并使用 OceanBase 数据库。
 
-<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/05%20%E5%88%9B%E5%BB%BA%20Go%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video  data-code="9000247" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/05%20%E5%88%9B%E5%BB%BA%20Go%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Java 应用程序
 
 本视频介绍了如何通过 MySQL Connector/J 连接并使用 OceanBase 数据库。
 
-<video src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/06%20%E5%88%9B%E5%BB%BA%20Java%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000248" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/video/06%20%E5%88%9B%E5%BB%BA%20Java%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+
+## 在 OceanBase 数据库上进行 TPC-C 测试
+
+在本视频中，通过在 OceanBase 数据库上运行 TPC-C 测试的方式，体验 OceanBase 数据库的 OLTP 能力。
+
+<video data-code="9000484" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/09%20%E5%9C%A8%20oceanbase%20%E6%95%B0%E6%8D%AE%E5%BA%93%E4%B8%8A%E8%BF%9B%E8%A1%8C%20tpc-c%20%E6%B5%8B%E8%AF%95.mp4" controls="" width="811px" height="456.188px"></video>
+
+## 体验 OceanBase 数据库热点行更新能力
+
+本视频中，我们将通过构造一个多并发单行更新的场景，介绍 OceanBase 数据库 ELR 特性的使用方法和效果对比。
+
+<video data-code="9000493" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/10%20%E7%83%AD%E7%82%B9%E8%A1%8C_1.mp4" controls="" width="811px" height="456.188px"></video>
+
+## 体验 Operational OLAP
+
+本视频带您体验 OceanBase 的 Operational OLAP 功能。
+
+<video data-code="9000638" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/%E4%BD%93%E9%AA%8C%20operational%20olap_1.mp4" controls="" width="811px" height="456.188px"></video>
+
+## 体验并行导入 & 数据压缩
+
+本视频介绍了并行导入和数据压缩相关的使用及说明。
+
+<video data-code="9000497" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/11%20%E5%B9%B6%E8%A1%8C%E5%AF%BC%E5%85%A5.mp4" controls="" width="811px" height="456.188px"></video>
+
+## 体验多租户特性
+
+本视频介绍了 OceanBase 数据库具有多租户的特性。在 OceanBase 数据库中，每一个租户即一个实例（类比 MySQL instance）。租户与租户之间数据、权限、资源隔离，每个租户拥有自己独立的访问端口及 CPU、内存访问资源。
+
+<video data-code="9000498" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/%E4%BD%93%E9%AA%8C%20oceanbase%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%9A%84%E5%A4%9A%E7%A7%9F%E6%88%B7%E8%83%BD%E5%8A%9B.mp4" controls="" width="811px" height="456.188px"></video>
+
+## 体验 DDL
+
+本视频介绍了 OceanBase 数据库 MySQL 模式下 DDL 新特性。
+
+<video data-code="9000640" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/ob%E6%95%B0%E6%8D%AE%E5%BA%93mysql%E6%A8%A1%E5%BC%8F%E4%B8%8B%E7%9A%84ddl%E6%96%B0%E7%89%B9%E6%80%A7.mp4" controls="" width="811px" height="456.188px"></video>
