--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
@@ -241,7 +241,7 @@ SELECT info.* FROM info, ext_t3 WHERE info.name = ext_t3.name AND ext_t3.score >
 2 rows in set
 ```
 
-更多查询操作，请参见 [读取数据](../../../../../3.develop/5.read-data/2.read-data-of-oracle-mode/1.single-table-query-of-oracle-mode.md) 。
+更多查询操作，请参见 [读取数据](../../../../../3.develop/2.application-development-of-oracle-mode/5.read-data-of-oracle-mode/1.single-table-query-of-oracle-mode.md) 。
 
 ## 外表使用注意事项
 
