--- a/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/2.create-a-external-table-of-mysql-mode.md
@@ -139,7 +139,7 @@ FORMAT = (
    obclient -h10.xx.xx.xx -P2881 -uxxx@xxx -p***** -A
    ```
 
-   通过直连方式连接数据库的详细操作，请参见 [通过 OBClient 连接 OceanBase 租户](../../../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)。
+   通过直连方式连接数据库的详细操作，请参见 [通过 OBClient 连接 OceanBase 租户](../../../../../3.develop/1.application-development-of-mysql-mode/1.connect-to-oceanbase-database-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)。
 
 2. 配置数据库可以访问的路径 `/home/admin/`。
 
@@ -241,7 +241,7 @@ SELECT info.* FROM info, ext_t3 WHERE info.name = ext_t3.name AND ext_t3.score >
 2 rows in set
 ```
 
-更多查询操作，请参见 [读取数据](../../../../../3.develop/5.read-data/1.read-data-of-mysql-mode/1.single-table-query-of-mysql-mode.md) 。
+更多查询操作，请参见 [读取数据](../../../../../3.develop/1.application-development-of-mysql-mode/5.read-data-of-mysql-mode/1.single-table-query-of-mysql-mode.md) 。
 
 ## 外表使用注意事项
 
